--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@
 
 .cards > .card {
   width: initial !important;
+  cursor: pointer;
+}
+
+.cards > .card.active {
+  background-color: #c0c1c2;
+  background-image: none;
+  -webkit-box-shadow: 0 0 0 1px transparent inset;
+  box-shadow: 0 0 0 1px transparent inset;
 }
 
 .cards > .card > div.image {
