--- a/style.css
+++ b/style.css
@@ -42,3 +42,15 @@
 .ui.segment {
   width: 522px;
 }
+
+button {
+  background-color: #b0e0e6 !important;
+}
+
+button > i {
+  transform: scale(1.5);
+  width: 24px !important;
+  height: 24px !important;
+  left: 6px !important;
+  top: 6px !important;
+}
