Add last split time in usage page

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@
   font-size: 1.3rem !important;
 }
 
+#last-split-time {
+  margin-top: 20px !important;
+}
+
 /* index.html */
 
 .cards > .card {
